# OpenCraft

./: CMakeLists.txt
res/Shader/: 9.ssao.fs  9.ssao_geometry.fs  9.ssao_geometry.vs  Atmo.frag  Atmo.vert  Chunk.frag  Chunk.vert  ChunkDeffered.frag  ChunkDeffered.vert  Cube.frag  Cube.vert  DefferedLighting.frag  SSAO.frag  SSAO_Combine.frag  SSAO_Cube.frag  SSAO_Cube.vert
src/: main.cpp
src/Client/Base/: Base.h
src/Client/Rendering/: Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  Shader.cpp  Shader.h  TextureArray.cpp  TextureArray.h  VertexArray.cpp  VertexArray.h  util.h
src/Client/Voxel/: Block.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Cube.h
src/Tracy/common/: TracySystem.hpp
